Added properties and jvm arguments.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
+## Server Properties
+server.port= 8080
+
+## Spring DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/notez
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+## Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+spring.datasource.initialization-mode=always
